fix the overflow issue

--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -1102,10 +1102,16 @@ Media query
     float:none;
     margin:30px auto;
    }
-}
+
 #owl-demo .item1, #owl-demo .item2, #owl-demo .item3, #owl-demo2 .item1, #owl-demo2 .item2, #owl-demo2 .item3 {
     background-size:100% 100%;
-    
+
+}
+#owl-demo .info, #owl-demo2 .info {
+   
+    width: 95%;
+    margin-right:0;
+  }
 }
 
 @media only screen and (max-width:320px){
